# fantasy_baseball_sleeper_finder

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/alembic/: alembic.ini  env.py
backend/app/: config.py  main.py
backend/app/db/: indexes.py  session.py
backend/app/models/: __init__.py  batting_stats.py  league_settings.py  pitching_stats.py  player.py  projections.py  scouting_report.py  statcast.py
backend/app/schemas/: league.py  player.py  rankings.py  scouting_report.py
backend/app/services/: auction_service.py  cache_service.py  player_service.py  scouting_report_service.py
backend/data_pipeline/: orchestrator.py
backend/data_pipeline/fetchers/: fangraphs_fetcher.py  player_id_mapper.py  roster_fetcher.py  statcast_fetcher.py
backend/data_pipeline/loaders/: db_loader.py
backend/data_pipeline/transformers/: cleaning.py  feature_engineering.py
backend/llm/: client.py
backend/llm/generators/: cache_manager.py  cost_monitor.py  scouting_generator.py
backend/llm/prompts/: formatters.py  scouting_report.py
backend/ml/features/: feature_store.py
backend/ml/inference/: explainer.py  predictor.py
backend/ml/models/: bust_model.py  consistency_model.py  improvement_model.py  marcel_baseline.py  regression_model.py  sleeper_model.py  trajectory_model.py  value_model.py
deploy/: docker-compose.prod.yml  fly.toml  railway.toml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
scripts/: run_inference.py  seed_database.py
(+37 files in other folders)
